
export interface DecisionDTO {
  decisionJoueur1: 'COOPERER' | 'TRAHIR' | null;
  decisionJoueur2: 'COOPERER' | 'TRAHIR' | null;
}
