// src/app/models/type-strategie.ts
export enum TypeStrategie {
    DONNANT_DONNANT = 'DONNANT_DONNANT',
    DONNANT_DONNANT_ALEATOIRE = 'DONNANT_DONNANT_ALEATOIRE',
    DONNANT_POUR_DEUX_DONNANTS = 'DONNANT_POUR_DEUX_DONNANTS',
    DONNANT_POUR_DEUX_DONNANTS_ALEATOIRE = 'DONNANT_POUR_DEUX_DONNANTS_ALEATOIRE',
    SONDEUR_NAIF = 'SONDEUR_NAIF',
    SONDEUR_REPENTANT = 'SONDEUR_REPENTANT',
    PACIFICATEUR_NAIF = 'PACIFICATEUR_NAIF',
    VRAI_PACIFICATEUR = 'VRAI_PACIFICATEUR',
    ALEATOIRE = 'ALEATOIRE',
    TOUJOURS_TRAHIR = 'TOUJOURS_TRAHIR',
    TOUJOURS_COOPERER = 'TOUJOURS_COOPERER',
    RANCUNIER = 'RANCUNIER',
    PAVLOV = 'PAVLOV',
    PAVLOV_ALEATOIRE = 'PAVLOV_ALEATOIRE',
    ADAPTATIF = 'ADAPTATIF',
    GRADUEL = 'GRADUEL',
    DONNANT_DONNANT_SOUPCONNEUX = 'DONNANT_DONNANT_SOUPCONNEUX',
    RANCUNIER_DOUX = 'RANCUNIER_DOUX'
   }
   