package fr.uga.l3miage.pc.prisonersdilemma.strategies;

import fr.uga.l3miage.pc.prisonersdilemma.models.Strategie;

public class StrategieAleatoire implements Strategie {
}
